fix(Menu): prevent event propagation on menu item click refactor(Button): adjust layout and styles for better alignment

--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -1,10 +1,9 @@
-.menu-items {
-    width: 223px;
+.menu-wrapper {
     display: flex;
-    justify-content: flex-end;
 }
 
 .popper-wrapper {
+    width: 223px;
     padding-bottom: 8px;
 }
 
